# algorithms

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  README.txt  WORKSPACE.bazel  main.cpp
chapter/2.1/: page17.cpp  sort.cpp  sort.h
chapter/4.1/: matrixMultiplication.cpp
chapter/6.0/: binaryTrees.hpp
codeWars/: AddingBigNumbers.cpp  Beermid.hpp  EqualSidesOfAnArray.hpp  SnailSort.hpp  SuperMarketQueue.hpp  TwotoOne.hpp  VowelCount.hpp  abbreviateAName.hpp  basicMathematicalOperations.hpp  battleShipValidator.hpp  bigNumbersMultiplication.cpp  bigNumbersRecurention.cpp  calculateBMI.hpp  consecutiveStrings.hpp  countOfPositivesSumOfNegatives.hpp  duplicateEncoder.hpp  evaluateMathematicalExpression.hpp  getTheMIddleCharacter.hpp  highestScoringWord.hpp  invertValues.hpp  maximumSubArraySum.hpp  pathFinder#shortestPath.cpp  playingWithDigits.hpp  pyramid.hpp  screenLockingPatterns.cpp  shortestWord.hpp  skyscrappers.hpp  sortTheOdd.hpp  sumOfPositive.hpp  task.todo
main/2.1/: page17.cpp  page17.h
tests/: 2.1_test.cpp  Beermid_test.cpp  battleShipValidator_test.cpp  calculateExpression_test.cpp  chapter2.1_test.cpp  pyramid_test.cpp  skyscrappers_test.cpp  snailSort_test.cpp  sort_test.cpp  squareSumTest.cpp
