load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# https://docs.bazel.build/versions/master/be/c-cpp.html#cc_library

cc_library(
    name = "utils",
    srcs = [
        "chapter/2.1/sort.cpp",
    ],
    hdrs = [
        "chapter/2.1/sort.h",
    ],
)

cc_test(
    name = "2.1_test",
    srcs = [
        "tests/sort_test.cpp",
    ],

    deps = [
        ":utils",
        "@com_google_googletest//:gtest_main",
    ],
)